fix invite modal overflow in safari

--- a/client/assets/styles/scss/modals/modals-invite.scss
+++ b/client/assets/styles/scss/modals/modals-invite.scss
@@ -96,6 +96,7 @@
 
   // description
   .label {
+    flex: 0 0 auto;
     margin: 0;
 
     .small {
